# rcm_denial_proto

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOY_GOOGLE_CLOUD.md  DEPLOY_ORACLE_CLOUD.md  Dockerfile  Dockerfile.hf  README.md  README_HF_SPACE.md  TECHNICAL_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  readme-venv_packages_setup.txt.txt  requirements.txt
.claude/: settings.local.json
.claude/memory/: MEMORY.md  feedback_lessons.md  project_cob_multi_payer.md  project_codebase.md  project_current_state.md  project_patient_cache.md  user_profile.md
.github/workflows/: ci.yml
.nicegui/: storage-user-400e3e9a-a1ee-4b56-a238-e466173957de.json
data/: carc_rarc_reference.json  claims.csv  demo_denials.csv  rcm_denial.db  sample_denials.csv
data/chroma_db/: chroma.sqlite3
data/evals/: golden_cases.json
data/observability/: docker-compose.yml  grafana_dashboard.json  prometheus.yml  promtail_config.yaml
data/sop_documents/: manifest.json  (+1 more)
deployment/: claim_db.json  railway.json  render.yaml
docs/: REQUIREMENTS_AND_ROADMAP.md  architecture_diagram.md  architecture_png_spec.md
output/: batch_summary_66e79fea4ec3.json  batch_summary_92bd8c81824e.json  batch_summary_e25cad751fd9.json  batch_summary_e74172bbbf8d.json  batch_summary_eb3f3f5b24b4.json
scripts/: generate_claims_csv.py  seed_knowledge_base.py
tests/: conftest.py  test_agents.py  test_batch_processor.py  test_cost_tracker.py  test_criteria_checks.py  test_rate_limiter.py  test_review_queue.py  test_sop_pipeline_mode.py  test_submission.py  test_tools.py
(+79 files in other folders)
